--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -6,57 +6,35 @@ body {
   padding-top: 5.5rem;
 }
 
-.row {
-  padding: 4rem;
-}
-
 nav {
   background-color: rgb(255, 255, 255);
   border-bottom: 1px solid rgb(246, 246, 246);
 }
 
 header {
-  background-image: url('/images/cover.png');
-  background-position: center;
-  background-repeat: no-repeat;
+  background: url('/images/cover.png') center no-repeat;
   background-size: cover;
   color: rgb(250, 250, 250);
   letter-spacing: 1px;
   padding: 6rem 0;
 }
 
-/*header .author-name {
-  font-size: 1.6rem;
-}*/
-
-header h1 {
+h1 {
   font-family: 'Open Sans', sans-serif;
   text-shadow: 3px 3px rgb(70, 70, 70);
   font-size: 2.1rem;
 }
 
-.about {
-  background-color: rgb(254, 254, 254);
-}
-
-.about h2 {
+h2 {
   font-family: 'Bellefair', serif;
   letter-spacing: 1px;
   margin-bottom: 1.5rem;
 }
 
-.about p {
+p {
   font-family: 'Open Sans', sans-serif;
   letter-spacing: 1px;
   line-height: 1.6;
-}
-
-.posts {
-  background-color: rgb(251, 251, 251);
-}
-
-.contact {
-  background-color: red;
 }
 
 /*Small devices (landscape phones, 576px and up)*/
